--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -1,7 +1,43 @@
-<div id="form">
-  <form id="searchform" method="get" action="#">
-    <input type="text" id="search" size="120" placeholder="Search for Movies, Music or Games">
-    <input type="submit" value="Search" class="search_btn">
-  </form>
-</div>
+<header></header>
+<div id="curtains"></div>
+ <div id="wrapper">
+  <section id="container">
+                <div class="title animated fadeInDown">Wecome to Poster Finder</div>
+                <div class="subtitle animated fadeInDown">Search for Movie, Music and Games Covers</div>
+                <div class="spanSubtitle animated fadeInDown">Just enter the name and click search</div>-->
+               
+                <div class="subscribeAndSocial animated fadeInDown">
+                    <div class="newsletter">
+                        <div class="title">and we'll get them for you</div>
+
+
+                        <form id="form">
+                            <input type="hidden" name="sendEmail" value=""; />
+                            <input type="text" name="email" placeholder="Enter Movie, Music or Game Name Here"/>
+                            <input type="submit" value="Submit" />
+                        </form>
+
+
+                        <div id="notifications"></div>
+                    </div>
+                    <div class="socialNetwork">
+                        <div class="title"></div>
+                        <ul class="social">
+                            <li class="facebook" title="Facebook"><a href="" target="_blank" ><span class="icon-Facebook"></span></a></li>
+                            <li class="twitter" title="Twitter"><a href="" target="_blank" ><span class="icon-Twitter"></span></a></li>
+                            <li class="gplus" title="Gplus"><a href="" target="_blank" ><span class="icon-Gplus"></span></a></li>
+                            <li class="dribble" title="Dribbble"><a href="" target="_blank" ><span class="icon-Dribbble"></span></a></li>
+                            <li class="flickr" title="Youtube Play"><a href="" target="_blank" ><span class="icon-YoutubePlay"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <div style="clear:both"></div>
+            <div class="footerMobile">
+                <div class="copyright"></div>
+            </div>
+        </div>
+        <footer class="animated fadeInDown">
+            <div class="copyright"></div>
+        </footer>
 
