Added social Icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="social">
+  <%= image_tag ('facebook.png')%>
+  <%= image_tag ('twitter.png')%>
+  <%= image_tag ('g+.png')%>
+  <%= image_tag ('dribble.png')%>
+  <%= image_tag ('youtube.png')%>
+</div>
 
 <%= yield %>
 
