tidied up search form and header spacing

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -3,14 +3,11 @@
  <div id="wrapper">
   <section id="container">
                 <div class="title animated fadeInDown">Wecome to Poster Finder</div>
-                <div class="subtitle animated fadeInDown">Search for Movie, Music and Games Covers</div>
-                <div class="spanSubtitle animated fadeInDown">Just enter the name and click search</div>-->
+                <div class="subtitle animated fadeInDown">Search for Movie, Music and Game Covers</div>
+                <div class="spanSubtitle animated fadeInDown">Just Enter a Name & Click Search</div>
                
                 <div class="subscribeAndSocial animated fadeInDown">
                     <div class="newsletter">
-                        <div class="title">and we'll get them for you</div>
-
-
                         <form id="form">
                             <input type="hidden" name="sendEmail" value=""; />
                             <input type="text" name="email" placeholder="Enter Movie, Music or Game Name Here"/>
