--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,6 +1,8 @@
 <% if @movies %>
-	<%= @results %>
-	<%= @image %>
+	<% @results.each do |movie| %>
+	  <h2><%= movie[:title] %></h2>
+	  <img src="<%= @image + movie[:image] %>" style="width:200px;height:200px;" />
+	<% end %>
 <% elsif @games %>
   <% @results.each do |game| %>
     <h2><%= game[:title] %></h2>
