Music results/images now displaying correctly.

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -10,4 +10,10 @@
       <img src="<%= image %>" style="width:200px;height:200px;" />
     <% end %>
   <% end %>
+<% elsif @music %>
+  <%= @results.each do |song| %>
+	<h2><%= song[:artist] %></h2>
+	<h3><%= song[:collection] %></h3>
+    <img src="<%= song[:image] %>" style="width:200px;height:200px;" />
+  <% end %>
 <% end %>
