Footer, twitter handles and rumble logo

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -35,6 +35,12 @@
             </div>
         </div>
         <footer class="animated fadeInDown">
-            <div class="copyright"></div>
+            <div class="copyright">
+                <a href="https://twitter.com/SeanHolden5">@SeanHolden5</a>
+                <a href="https://twitter.com/richl14">@richl14</a>
+                <a href="https://twitter.com/KDTurner">@KDTurner</a>
+                <a href="https://twitter.com/BradleyAllen512">BradleyAllen512</a>
+                <%= image_tag ('rumble.png')%>
+            </div>
         </footer>
 
