--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -5,6 +5,8 @@
     <%= radio_button_tag 'submit_type', 'movie', true %>
     <%= label_tag "Game" %>
     <%= radio_button_tag 'submit_type', 'game' %>
+    <%= label_tag "Music" %>
+    <%= radio_button_tag 'submit_type', 'music' %>
   </div>
   <%= submit_tag "search", :id => 'submitForm' %>
 <% end %>
