--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -6,6 +6,10 @@
 <% elsif @games %>
   <% @results.each do |game| %>
     <h2><%= game[:title] %></h2>
+    <% if !game[:backdrop].nil? %>
+	    <p><strong>BACKDROP -> <img style="width:300px;height:300px;" src="<%= game[:backdrop] %>" /></strong></p>
+	<% end %>
+	<p><strong>IMAGES:</strong></p>
     <% game[:images].each do |image| %>
       <img src="<%= image %>" style="width:200px;height:200px;" />
     <% end %>
