moved twitter handles back to center

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -40,10 +40,12 @@
                         </ul>
                     </div>
                 </div>
+                <div id="twittag">
                 <a href="https://twitter.com/SeanHolden5">@SeanHolden5</a>
                 <a href="https://twitter.com/richl14">@richl14</a>
                 <a href="https://twitter.com/KDTurner">@KDTurner</a>
                 <a href="https://twitter.com/BradleyAllen512">BradleyAllen512</a>
                 <%= image_tag ('rumble.png')%>
+            </div>
             </div>
         </footer>
