--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-    /*background-image:url('/assets/img_background_full_hd.jpg');*/
+    /*background-image:url('/assets/img_background_full_hd.png');*/
     -webkit-backface-visibility: hidden;
 }
 .animated {
