--- a/app/assets/stylesheets/d-vegas.css
+++ b/app/assets/stylesheets/d-vegas.css
@@ -3,7 +3,7 @@
 	bottom:20px;
 }
 .vegas-overlay {
-	background:transparent url("/assets/img_background_full_hd.jpg");
+	background:transparent url("img_background_full_hd.jpg");
 }
 ul {
 	float:right;
