--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-    /*background-image:url('/assets/img_background_full_hd.jpg');*/
+    /*background-image:url('img_background_full_hd.jpg');*/
     -webkit-backface-visibility: hidden;
 }
 .animated {
@@ -2561,7 +2561,7 @@ body:after {
     clear: both;
 }
 header {
-    background-image:url('/assets/topbanner.jpg');
+    background-image:url('topbanner.jpg');
     width: 100%;
     height: 20px;
     position: relative;
