--- a/app/assets/stylesheets/d-vegas.css.erb
+++ b/app/assets/stylesheets/d-vegas.css.erb
@@ -3,7 +3,7 @@
 	bottom:20px;
 }
 .vegas-overlay {
-	background:transparent url("img_background_full_hd.jpg");
+	background:transparent url(<%= asset_path 'img_background_full_hd.jpg' %>);
 }
 ul {
 	float:right;
