--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -2561,7 +2561,7 @@ body:after {
     clear: both;
 }
 header {
-    background-image:url('topbanner.jpg');
+    background-image:url(<%= asset_path 'topbanner.jpg' %>);
     width: 100%;
     height: 20px;
     position: relative;
