carousel is working for game search. Also changing background to highlighted game image accordingly.

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -6,16 +6,26 @@
     <li><img class="result" src="<%= @image + movie[:image] %>" style="width:150px;height:100px;" /></li>
   <% end %>
 <% elsif @games %>
-  <% @results.each do |game| %>
-    <!--<h2><%= game[:title] %></h2>-->
-    <% game[:images].take(4).each do |image| %>
-      <li>
-        <a href="<%= image %>" data-valign="top">
-         <img class="result" src="<%= image %>" style="width:150px;height:100px;" />
+    <img class="background" src="" />
+    <section class="roundaboutcontainer">
+      <h1 id="game-title"></h1>
+      <ul class="roundabout-holder">
+        <% @results.each do |game| %>
+          <% game[:images].each do |image| %>
+            <li><img data-title="<%= game[:title] %>" class="roundabout-image" src="<%= image %>"></li>
+          <% end %>
+        <% end %>
+      </ul>
+    </section>
+  <%# @results.each do |game| %>
+    <%# game[:images].take(4).each do |image| %>
+<!--       <li>
+        <a href="<%#= image %>" data-valign="top">
+         <img class="result" src="<%#= image %>" style="width:150px;height:100px;" />
         </a>
-     </li>
-    <% end %>
-  <% end %>
+     </li> -->
+    <%# end %>
+  <%# end %>
 <% elsif @music %>
   <% @results.each do |song| %>
   <!--<h2><%= song[:artist] %></h2>-->
@@ -26,90 +36,122 @@
 <% end %>
  
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('.roundabout-holder').roundabout();
+    setBackgroundImage();
+    initializeRoundaboutClick();
+  });
+
+  // On click, set the background image to the image in focus.
+  function initializeRoundaboutClick(){
+    $('.roundabout-image').click(function(){
+      setBackgroundImage();
+    });
+  }
+
+  function setBackgroundImage(){
+    setTimeout(function(){
+      var frontImage = $('.roundabout-in-focus img');
+      var url = frontImage.attr('src');
+      $('body').css('background-image', 'url('+url+')');
+      $('body').css('background-size', 'cover');
+      $('body').css('background-repeat', 'no-repeat');
+      $('#game-title').html(frontImage.data('title'));
+    }, 1000);
+  }
+</script>
+
+
+
+
+
+
 <script>
-$( function() { 
-    var slideshowRunning = false,
-    backgroundList = [];
+// $( function() { 
+//     var slideshowRunning = false,
+//     backgroundList = [];
 
-    // Build the background list with href of links
-    $( '#menu a' ).each( function() { 
-        backgroundList.push( { 
-            src: $( this ).attr( 'href' ),
-            valign: $( this ).data( 'valign' ),
-      fade: 3000
-         } );
-     } );
+//     // Build the background list with href of links
+//     $( '#menu a' ).each( function() { 
+//         backgroundList.push( { 
+//             src: $( this ).attr( 'href' ),
+//             valign: $( this ).data( 'valign' ),
+//       fade: 3000
+//          } );
+//      } );
     
-    // Define a slideshow with overlay and pause it
-  $.vegas( backgroundList[3] )
-  ( 'overlay', {
-    opacity: 0.5
-  })
-  ( 'pause' );
+//     // Define a slideshow with overlay and pause it
+//   $.vegas( backgroundList[3] )
+//   ( 'overlay', {
+//     opacity: 0.5
+//   })
+//   ( 'pause' );
 
-    // A short demo
-    $( '#menu a' ).click( function() { 
+//     // A short demo
+//     $( '#menu a' ).click( function() { 
   
-        // If the SlideShow link is clicked
-        if ( $( this ).is( '#slideshow' ) ) { 
+//         // If the SlideShow link is clicked
+//         if ( $( this ).is( '#slideshow' ) ) { 
     
-            // Start the SlideShow
-            if ( slideshowRunning == false ) { 
-                slideshowRunning = true;
+//             // Start the SlideShow
+//             if ( slideshowRunning == false ) { 
+//                 slideshowRunning = true;
         
-                $( '#pause' )
-          .show()
-          .css( 'opacity', 0.5 )
-          .html( 'PAUSE' );
+//                 $( '#pause' )
+//           .show()
+//           .css( 'opacity', 0.5 )
+//           .html( 'PAUSE' );
           
-        $.vegas( 'slideshow', { 
-          delay: 5000,
-          backgrounds: backgroundList,
-        })
+//         $.vegas( 'slideshow', { 
+//           delay: 5000,
+//           backgrounds: backgroundList,
+//         })
         
-            // Pause the SlideShow
-             } else { 
-                slideshowRunning = false;
+//             // Pause the SlideShow
+//              } else { 
+//                 slideshowRunning = false;
         
-                $( '#pause' )
-          .show()
-          .css( 'opacity', 0.5 )
-          .html( 'PLAY' );
+//                 $( '#pause' )
+//           .show()
+//           .css( 'opacity', 0.5 )
+//           .html( 'PLAY' );
           
-                $.vegas( 'pause' );  
-             }
+//                 $.vegas( 'pause' );  
+//              }
             
-        // If a standard Thumbnail is clicked
-         } else { 
-      slideshowRunning = false;
+//         // If a standard Thumbnail is clicked
+//          } else { 
+//       slideshowRunning = false;
       
-            $( '#pause' ).hide();
-      $( '#thumbnail' ).attr( 'src', 'images/slideshow.gif' );
+//             $( '#pause' ).hide();
+//       $( '#thumbnail' ).attr( 'src', 'images/slideshow.gif' );
 
-      var idx = $( this ).parent( 'li' ).index();
-      $.vegas( 'stop' )( backgroundList[idx] );
-         }
+//       var idx = $( this ).parent( 'li' ).index();
+//       $.vegas( 'stop' )( backgroundList[idx] );
+//          }
      
-         return false;
-     } );
+//          return false;
+//      } );
    
-  // Apply a border to the right thumbnail when a background is loaded
-  $( 'body' ).bind( 'vegasload', function( e, bg ) {      
-      var src = $( bg ).attr( 'src' ).replace( 'background', 'thumbnail' );
+//   // Apply a border to the right thumbnail when a background is loaded
+//   $( 'body' ).bind( 'vegasload', function( e, bg ) {      
+//       var src = $( bg ).attr( 'src' ).replace( 'background', 'thumbnail' );
     
-    $( '#menu img' )
-      .css( 'border', '1px solid #FFF' ); 
-    $( 'img[src="' + src + '"]' )
-      .css( 'border', '1px solid #CF0' );
-  });
+//     $( '#menu img' )
+//       .css( 'border', '1px solid #FFF' ); 
+//     $( 'img[src="' + src + '"]' )
+//       .css( 'border', '1px solid #CF0' );
+//   });
   
-  // Display the right thumbnail instead of the slideshow animated gif when the slideshow is running
-  $( 'body' ).bind( 'vegaswalk', function( e, bg ) {
-      var src = $( bg ).attr( 'src' ).replace( 'background', 'thumbnail' );
+//   // Display the right thumbnail instead of the slideshow animated gif when the slideshow is running
+//   $( 'body' ).bind( 'vegaswalk', function( e, bg ) {
+//       var src = $( bg ).attr( 'src' ).replace( 'background', 'thumbnail' );
     
-    $( '#thumbnail' ).attr( 'src', src );
-  });
- } );
+//     $( '#thumbnail' ).attr( 'src', src );
+//   });
+//  } );
 </script>
 
 
