--- a/app/assets/stylesheets/d-vegas.css.erb
+++ b/app/assets/stylesheets/d-vegas.css.erb
@@ -1,4 +1,4 @@
-.vegas-loading {
+/*.vegas-loading {
 	top:auto;
 	bottom:20px;
 }
@@ -158,4 +158,4 @@ ul {
 	top:0;
 	left:0;
 	z-index:999;
-}
+}*/
