--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -3224,8 +3224,9 @@ footer {
 img.roundabout-image{
   width:15em;
   height:15em;
+  border:2px groove black;
 }
 
-#game-title{
+#game-movie-music-title{
   text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
