removing social, adding badge

--- a/app/assets/stylesheets/d-vegas.css.erb
+++ b/app/assets/stylesheets/d-vegas.css.erb
@@ -5,6 +5,13 @@
 .vegas-overlay {
 	background:transparent url(<%= asset_path 'img_background_full_hd.jpg' %>);
 }
+#twittag{
+	margin-left: 12%;
+}
+#badge{
+	bottom: 0;
+	right: 0;
+}
 ul {
 	float:left;
 }
