--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -27,29 +27,23 @@
              <% end %>
             <div id="notifications"></div>
         </div>
-        <div class="socialNetwork">
-            <div class="title"></div>
-            <ul class="social">
-                <a href="" target="_blank"><%= image_tag ('facebook.png')%></a>
-                <a href="" target="_blank" ><%= image_tag ('twitter.png')%></a>
-                <a href="" target="_blank" ><%= image_tag ('g+.png')%></a>
-                <a href="" target="_blank"><%= image_tag ('dribble.png')%></a>
-                <a href="" target="_blank" ><%= image_tag ('youtube.png')%></a>
-            </ul>
-        </div>
-    </div>
   </section>
   <div style="clear:both"></div>
   <div class="footerMobile">
     <div class="copyright"></div>
   </div>
 </div>
+    <div id="badge">
+    <%= image_tag ('badge.png')%>
+</div>
 <footer class="animated fadeInDown">
     <div class="copyright">
+        <div id="twittag">
         <a href="https://twitter.com/SeanHolden5">@SeanHolden5</a>
         <a href="https://twitter.com/richl14">@richl14</a>
         <a href="https://twitter.com/KDTurner">@KDTurner</a>
         <a href="https://twitter.com/BradleyAllen512">BradleyAllen512</a>
         <%= image_tag ('rumble.png')%>
+    </div>
     </div>
 </footer>
