social removed, badge added

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -33,9 +33,7 @@
     <div class="copyright"></div>
   </div>
 </div>
-    <div id="badge">
-    <%= image_tag ('badge.png')%>
-</div>
+
 <footer class="animated fadeInDown">
     <div class="copyright">
         <div id="twittag">
@@ -43,7 +41,7 @@
         <a href="https://twitter.com/richl14">@richl14</a>
         <a href="https://twitter.com/KDTurner">@KDTurner</a>
         <a href="https://twitter.com/BradleyAllen512">BradleyAllen512</a>
-        <%= image_tag ('rumble.png')%>
     </div>
+    <div id="badge"> <%= image_tag ('badge.png')%></div>
     </div>
 </footer>
