--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -7,7 +7,7 @@
     </div>
   <% end %>
   <section id="container">
-      <div class="title animated fadeInDown">Wecome to Poster Finder</div>
+      <div class="title animated fadeInDown">Wecome to MMGC Finder</div>
       <div class="subtitle animated fadeInDown">Search for Movie, Music and Game Covers</div>
       <div class="spanSubtitle animated fadeInDown">Just Enter a Name & Click Search</div>
      
