forgot the @ on my twitter

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -40,7 +40,7 @@
         <a href="https://twitter.com/SeanHolden5">@SeanHolden5</a>
         <a href="https://twitter.com/richl14">@richl14</a>
         <a href="https://twitter.com/KDTurner">@KDTurner</a>
-        <a href="https://twitter.com/BradleyAllen512">BradleyAllen512</a>
+        <a href="https://twitter.com/BradleyAllen512">@BradleyAllen512</a>
     </div>
     <div id="badge"> <%= image_tag ('badge.png')%></div>
     </div>
