--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -2,6 +2,13 @@ body {
     /*background-image:url('img_background_full_hd.jpg');*/
     -webkit-backface-visibility: hidden;
 }
+
+#badge img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .animated {
     -webkit-animation-duration: 500ms;
     -moz-animation-duration: 500ms;
