--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -33,7 +33,7 @@
     <div class="copyright"></div>
   </div>
 </div>
-<div id="badge"> <%= image_tag ('badge.png')%></div>
+<div class="animated fadeInDown" id='badge'> <%= image_tag ('badge.png')%></div>
 <footer class="animated fadeInDown">
     <div class="copyright">
         <div id="twittag">
