--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -3236,4 +3236,22 @@ img.roundabout-image{
 
 #game-movie-music-title{
   text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+  position: relative;
+  z-index:999;
+}
+
+.back-button{
+  position: relative;
+  z-index:999; 
+}
+
+#dimmer{
+  background:#000;
+  opacity:0.5;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display:block;
 }
