--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,3 +1,4 @@
+<div id="dimmer"></div>
 <div id="containerResults">
    <ul id="menu">
 <% if @movies %>
@@ -5,7 +6,7 @@
 
     <section class="roundaboutcontainer">
       <h1 id="game-movie-music-title"></h1>
-      <a href="/"><button style="padding:10px;"><< Back</button></a>
+      <a href="/" class="back-button"><button style="padding:10px;"><< Back</button></a>
       <ul class="roundabout-holder">
         <% @results.each do |movie| %>
           <% if movie[:backdrop] %>
@@ -21,7 +22,7 @@
   <div id="type" data-type="game" style="display:hidden;"></div>
   <section class="roundaboutcontainer">
     <h1 id="game-movie-music-title"></h1>
-    <a href="/"><button style="padding:10px;"><< Back</button></a>
+    <a href="/" class="back-button"><button style="padding:10px;"><< Back</button></a>
     <ul class="roundabout-holder">
       <% @results.each do |game| %>
         <% game[:images].each do |image| %>
@@ -35,7 +36,7 @@
   <div id="type" data-type="music" style="display:hidden;"></div>
   <section class="roundaboutcontainer">
     <h1 id="game-movie-music-title"></h1>
-    <a href="/"><button style="padding:10px;"><< Back</button></a>
+    <a href="/" class="back-button"><button style="padding:10px;"><< Back</button></a>
     <ul class="roundabout-holder">
       <% @results.each do |song| %>
         <li><img data-title='<%= "#{song[:artist]}: #{song[:collection]}" %>' class="roundabout-image" src="<%= song[:image] %>" /></li>
@@ -47,6 +48,8 @@
 <% end %>
  
 </div>
+
+
 
 <script type="text/javascript">
   $(document).ready(function() {
