added tmdb link

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -42,5 +42,6 @@
         <a href="https://twitter.com/KDTurner">@KDTurner</a>
         <a href="https://twitter.com/BradleyAllen512">@BradleyAllen512</a>
     </div>
+    <a href="http://www.themoviedb.org/">Movie info by TMDb</a>
     </div>
 </footer>
